welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:4: error: recursive value x needs type
  val  x=x+1
         ^Methods:7: error: not found: value x
forward(x)
        ^